# QTcalculator

./: CMakeLists.txt  DivideExpression.cpp  DivideExpression.h  MinusExpression.cpp  MinusExpression.h  MultiPlyExpression.cpp  MultiPlyExpression.h  NumberExpression.cpp  NumberExpression.h  PlusExpression.cpp  PlusExpression.h  PostFixExpression.cpp  PostFixExpression.h  README.md  Widget.cpp  Widget.h  main.cpp
